--- a/html/about.html
+++ b/html/about.html
@@ -21,7 +21,7 @@
             
             <a href="../html/about.html"><h5>About<h5></a>
                
-            <a href="../index.html"><h5></h5>Sign-in<h5></a>
+            <a href="../index.html"><h5>Sign-in</h5></a>
 
         </div>
         <div class="logo">
