--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <a href="../html/about.html"><h5>About<h5></a>
                
-            <a href="../html/about.html"><h5></h5>Sign-in<h5></a>
+            <a href="../html/about.html"><h5>Sign-in</h5></a>
 
         </div>
         <div class="logo">
