--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="search"></div>
         <div class="mag_glass"></div>
         <div class="links">
-            <a href="../html/about.html"><h5>Home</h5></a>
+            <a href="html/about.html"><h5>Home</h5></a>
             
-            <a href="../html/about.html"><h5>About<h5></a>
+            <a href="html/about.html"><h5>About<h5></a>
                
-            <a href="../html/about.html"><h5>Sign-in</h5></a>
+            <a href="html/about.html"><h5>Sign-in</h5></a>
 
         </div>
         <div class="logo">
